<resources>
    <string name="share_file_chooser_title">Share with</string>
    <string name="grant_permission">Grant permission</string>
    <string name="keep_alive_service">This service keeps Termux:API running in the background for faster startup of termux-* commands.</string>
    <string name="permission_description">This app needs the following permission(s):\n</string>
    <string name="plugin_info">&TERMUX_API_APP_NAME; is a plugin app for the &TERMUX_APP_NAME; app
        that executes termux-api package commands.
        Check &TERMUX_APP_NAME; app github %1$s, &TERMUX_API_APP_NAME; app github %2$s and
        %3$s package github %4$s for more info.

        \n\nThe &TERMUX_API_APP_NAME; app requires `%3$s` apt package to function.
        Run `pkg install %3$s` to install it.

        \n\nNote that if &TERMUX_API_APP_NAME; app crashes too many times, then android will mark the
        app as a bad process and you will need to manually start this activity again once for the
        api commands to start working again, otherwise the commands will hang.

        \n\nReports for some crashes may be shown when you restart &TERMUX_APP_NAME; app.</string>
    <string name="msg_battery_optimization_not_disabled_warning">Android battery optimizations
        should be disabled for the &TERMUX_API_APP_NAME; app so that termux-api script can start
        it from the background if its failing to do so. Do not worry, this will not drain battery,
        the app currently only runs commands when called from termux-api script.
        Check https://developer.android.com/about/versions/oreo/background and
        https://developer.android.com/guide/components/foreground-services#background-start-restrictions
        for more info.

        \n\nAlso check https://dontkillmyapp.com for info on vendor specific app killers.
        Depending on vendor you may need to do things like enable AutoStart, disable DuraSpeed,
        enable `Display pop-up windows while running in the background` for the app.</string>
    <string name="action_disable_battery_optimizations">Disable Battery Optimizations</string>
    <string name="msg_display_over_other_apps_permission_not_granted_warning">The display over other
        apps permission should be granted to &TERMUX_API_APP_NAME; app for starting foreground
        activities from background. Check https://developer.android.com/guide/components/activities/background-starts
        for more info.
    </string>
    <string name="action_grant_display_over_other_apps_permission">Grant Draw Over Apps Permission</string>
    <string name="action_already_granted">Already Granted</string>
    <string name="action_already_disabled">Already Disabled</string>
    <string name="action_info">Info</string>
    <string name="action_settings">Settings</string>
    <string name="application_name">NTermux</string>
    <string name="shared_user_label">&TERMUX_APP_NAME; user</string>
    <string name="permission_run_command_label">Run commands in &TERMUX_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMUX_APP_NAME;
        environment and access files</string>
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">&TERMUX_APP_NAME; was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">&TERMUX_APP_NAME; can only be run as the primary user.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="bootstrap_error_installed_on_portable_sd">&TERMUX_APP_NAME; cannot be installed on
        portable/external/removable sd card on your device.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="msg_enabling_terminal_toolbar">Enabling Terminal Toolbar</string>
    <string name="msg_disabling_terminal_toolbar">Disabling Terminal Toolbar</string>
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>
    <string name="action_share_selected_text">Share selected text</string>
    <string name="title_share_selected_text">Terminal Text</string>
    <string name="title_share_selected_text_with">Send selected text to:</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="msg_generating_report">Generating Report</string>
    <string name="msg_add_termux_debug_info">Add termux debug info to report?</string>
    <string name="error_styling_not_installed">The &TERMUX_STYLING_APP_NAME; Plugin App is not installed.</string>
    <string name="action_styling_install">Install</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="error_display_over_other_apps_permission_not_granted_to_start_terminal">&TERMUX_APP_NAME; requires
        \"Display over other apps\" permission to start terminal sessions from background on Android >= 10.
        Grants it from Settings -> Apps -> &TERMUX_APP_NAME; -> Advanced</string>
    <string name="error_termux_service_invalid_execution_command_runner">Invalid execution command runner to TermuxService: `%1$s`</string>
    <string name="error_termux_service_unsupported_execution_command_runner">Unsupported execution command runner to TermuxService: `%1$s`</string>
    <string name="error_termux_service_unsupported_execution_command_shell_create_mode">Unsupported execution command shell create mode to TermuxService: `%1$s`</string>
    <string name="error_termux_service_execution_command_shell_name_unset">Shell name not set but `%1$s` shell create mode passed</string>
    <string name="error_run_command_service_invalid_intent_action">Invalid intent action to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_invalid_execution_command_runner">Invalid execution command runner to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_mandatory_extra_missing">Mandatory extra missing to RunCommandService: \"%1$s\"</string>
    <string name="error_run_command_service_api_help">Visit %1$s for more info on RUN_COMMAND Intent usage.</string>
    <string name="title_file_received">Save file in ~/downloads/</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>
    <string name="error_termux_service_start_failed_general">Failed to start TermuxService. Check logcat for exception message.</string>
    <string name="error_termux_service_start_failed_bg">Failed to start TermuxService while app is in background due to android bg restrictions.</string>
    <string name="title_activity_termux_settings">&TERMUX_APP_NAME; Settings</string>
    <string name="termux_preferences_title">&TERMUX_APP_NAME;</string>
    <string name="termux_preferences_summary">Preferences for &TERMUX_APP_NAME; app</string>
        <string name="termux_debugging_preferences_title">Debugging</string>
        <string name="termux_debugging_preferences_summary">Preferences for debugging</string>
            <string name="termux_logging_header">Logging</string>
                <string name="termux_log_level_title">Log Level</string>
                <string name="termux_terminal_view_key_logging_enabled_title">Terminal View Key Logging</string>
                <string name="termux_terminal_view_key_logging_enabled_off">Logs will not have entries for terminal view keys. (Default)</string>
                <string name="termux_terminal_view_key_logging_enabled_on">Logcat logs will have entries for terminal view keys.
                    These are very verbose and should be disabled under normal circumstances or will cause performance issues.</string>
                <string name="termux_plugin_error_notifications_enabled_title">Plugin Error Notifications</string>
                <string name="termux_plugin_error_notifications_enabled_off">Disable flashes and notifications for plugin errors.</string>
                <string name="termux_plugin_error_notifications_enabled_on">Show flashes and notifications for plugin errors. (Default)</string>
                <string name="termux_crash_report_notifications_enabled_title">Crash Report Notifications</string>
                <string name="termux_crash_report_notifications_enabled_off">Disable notifications for crash reports.</string>
                <string name="termux_crash_report_notifications_enabled_on">Show notifications for crash reports. (Default)</string>
        <string name="termux_terminal_io_preferences_title">Terminal I/O</string>
        <string name="termux_terminal_io_preferences_summary">Preferences for terminal I/O</string>
            <string name="termux_keyboard_header">Keyboard</string>
                <string name="termux_soft_keyboard_enabled_title">Soft Keyboard Enabled</string>
                <string name="termux_soft_keyboard_enabled_off">Soft keyboard will be disabled.</string>
                <string name="termux_soft_keyboard_enabled_on">Soft keyboard will be enabled. (Default)</string>
                <string name="termux_soft_keyboard_enabled_only_if_no_hardware_title">Soft Keyboard Only If No Hardware</string>
                <string name="termux_soft_keyboard_enabled_only_if_no_hardware_off">Soft keyboard will be enabled even if
                    hardware keyboard is connected. (Default)</string>
        <string name="termux_terminal_view_preferences_title">Terminal View</string>
        <string name="termux_terminal_view_preferences_summary">Preferences for terminal view</string>
</resources>